--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,15 +1,19 @@
 <div class="row equal-heights" style="text-align: center;">
   <div class="span4 offset4">
-    <h1 class="title">Projects</h1>
+    <header class="jumbotron masthead">
+      <h1 class="title">projects</h1>
 
-    <script type="text/x-handlebars">
-      {{ view DashIt.ListProjectsView }}
-    </script>
+      <div class="inner">
+        <script type="text/x-handlebars">
+          {{ view DashIt.ListProjectsView }}
+        </script>
 
-    <script type="text/javascript">
-      $(function() {
-        DashIt.projectsController.loadAll(<%= @projects.to_json.html_safe %>);
-      });
-    </script>
+        <script type="text/javascript">
+          $(function() {
+            DashIt.projectsController.loadAll(<%= @projects.to_json.html_safe %>);
+          });
+        </script>
+      </div>
+    </header>
   </div>
 </div>
