minor ui changes

--- a/app/assets/javascripts/ember/templates/projects/list.handlebars
+++ b/app/assets/javascripts/ember/templates/projects/list.handlebars
@@ -13,6 +13,5 @@
 
 <hr>
 <div class="commands">
-  <a href="#" {{action "showNew"}}>New Project</a>
-  <a href="#" {{action "refreshListing"}}>Refresh Listing</a>
+  <a href="#" {{action "showNew"}}>new project</a>
 </div>
