--- a/app/assets/javascripts/ember/templates/projects/show.handlebars
+++ b/app/assets/javascripts/ember/templates/projects/show.handlebars
@@ -7,8 +7,8 @@
     {{/if}}
     <div class="commands">
       {{#unless isEditing}}
-        <a href="#" {{action "showEdit"}}>Edit</a>
-        <a href="#" {{action "destroyRecord"}}>Remove</a>
+        <a href="#" {{action "showEdit"}}>edit</a>
+        <a href="#" {{action "destroyRecord"}}>delete</a>
       {{/unless}}
     </div>
   </dt>
