--- a/app/assets/javascripts/dashit/templates/projects/show.handlebars
+++ b/app/assets/javascripts/dashit/templates/projects/show.handlebars
@@ -4,11 +4,13 @@
       {{view DashIt.EditProjectView}}
     {{else}}
       <p>{{project.name}}</p>
-      {{view DashIt.ProjectTodosView todosBinding="project.todos"}}
+      {{#if displayTodos}}
+        {{view DashIt.ProjectTodosView todosBinding="project.todos"}}
+      {{/if}}
     {{/if}}
     <div class="commands">
       {{#unless isEditing}}
-        <a href="#" {{action "showTodos"}}>todos</a>
+        <a href="#" {{action "toggleTodos"}}>todos</a>
         <a href="#" {{action "showEdit"}}>edit</a>
         <a href="#" {{action "destroyRecord"}}>delete</a>
       {{/unless}}
