show new todo on todo list view

--- a/app/assets/javascripts/dashit/templates/todos/list.handlebars
+++ b/app/assets/javascripts/dashit/templates/todos/list.handlebars
@@ -3,5 +3,14 @@
   {{#each todos}}
     {{view DashIt.ShowTodoView todoBinding="this"}}
   {{/each}}
+  {{#if isNewTodoVisible}}
+    <dt>
+      {{view DashIt.NewTodoView}}
+    </dt>
+  {{/if}}
+
+  <div class="commands">
+      <a href="#" {{action "showNewTodo"}}>new todo</a>
+  </div>
   </dt>
 </dl>
