--- a/app/assets/javascripts/dashit/templates/todos/show.handlebars
+++ b/app/assets/javascripts/dashit/templates/todos/show.handlebars
@@ -1,1 +1,5 @@
-<p>{{todo.description}}</p>
+{{#if isTodoEditing}}
+  {{view DashIt.EditTodoView}}
+{{else}}
+  <p>{{todo.description}}</p>
+{{/if}}
