add css to add line through todos that are done

--- a/app/assets/stylesheets/dash-it.css
+++ b/app/assets/stylesheets/dash-it.css
@@ -11,3 +11,8 @@ div.floating {
     -moz-box-shadow: 0 0 15px #666666; 
     box-shadow:0 0 15px #666666; 
 }
+
+div.done {
+  text-color: #B7B7B7;
+  text-decoration: line-through;
+}
