use checkbox view instead

--- a/app/assets/javascripts/dashit/templates/todos/show.handlebars
+++ b/app/assets/javascripts/dashit/templates/todos/show.handlebars
@@ -1,5 +1,5 @@
 {{#if isTodoEditing}}
   {{view DashIt.EditTodoView}}
 {{else}}
-  <p>{{todo.description}}</p>
+{{view DashIt.ShowTodoCheckboxView todoBinding="todo"}}
 {{/if}}
