add link to clear todos that are done

--- a/app/assets/javascripts/dashit/templates/todos/list.handlebars
+++ b/app/assets/javascripts/dashit/templates/todos/list.handlebars
@@ -11,6 +11,7 @@
 
   <div class="commands">
       <a href="#" {{action "showNewTodo"}}>new todo</a>
+      <a href="#" {{action "clearFinished"}}>clear finished</a>
   </div>
   </dt>
 </dl>
