--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <%= render partial: ‘layouts/ga’ if Rails.env == 'production' %>
+  <%= render partial: 'layouts/ga' if Rails.env == 'production' %>
 </head>
 <body>
   <div class="container">
