--- a/app/assets/stylesheets/dash-it.css
+++ b/app/assets/stylesheets/dash-it.css
@@ -16,3 +16,13 @@ div.done {
   text-color: #B7B7B7;
   text-decoration: line-through;
 }
+
+.footer {
+  margin-top: 45px;
+  padding: 35px 0 36px;
+  border-top: 1px solid #e5e5e5;
+}
+.footer p {
+  margin-bottom: 0;
+  color: #555;
+}
