show sign out if user is logged in

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,6 +14,11 @@
           });
         </script>
       </div>
+        <% if current_user %>
+          <footer class="footer">
+            <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+          </footer>
+        <% end %>
     </header>
   </div>
 </div>
