--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,6 +11,7 @@
         <script type="text/javascript">
           $(function() {
             DashIt.projectsController.loadAll(<%= @projects.to_json.html_safe %>);
+            DashIt.projectsController.set_user_id(<%= current_user.id %>);
           });
         </script>
       </div>
