--- a/app/assets/javascripts/dashit/templates/todos/list.handlebars
+++ b/app/assets/javascripts/dashit/templates/todos/list.handlebars
@@ -10,7 +10,7 @@
   {{/if}}
 
   <div class="commands">
-      <a href="#" {{action "showNewTodo"}}>new todo</a>
+      <a href="#" {{action "showNewTodo"}}>new todo</a><br/>
       <a href="#" {{action "clearFinished"}}>clear finished</a>
   </div>
   </dt>
