--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -17,7 +17,8 @@
       </div>
         <% if current_user %>
           <footer class="footer">
-            <%= link_to "Sign out, #{current_user.email}", destroy_user_session_path, method: :delete %>
+            <%= link_to "Sign out, #{current_user.email}", destroy_user_session_path, method: :delete %><br/>
+            <%= link_to "Edit profile", edit_user_registration_path %>
           </footer>
         <% end %>
     </header>
