--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -2,6 +2,7 @@
   <div class="span4 offset4">
 
     <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { class: "form-inline", method: :post }) do |f| %>
+      <%= display_error_messages! %>
       <fieldset>
         <legend>Forgot your password?</legend>
         <br/>
