--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,25 +1,44 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="row equal-heights" style="text-align: center;">
+  <div class="span4 offset4">
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { method: :put, class: "form-inline" }) do |f| %>
+      <%= display_error_messages! %>
+      <fieldset>
+        <legend>Edit your data</legend>
+        <br/>
+        <div class="control-group">
+          <div class="controls">
+            <%= f.email_field :email, placeholder: :email %>
+          </div>
+        </div>
+        <div class="control-group">
+          <div class="controls">
+            <%= f.password_field :password, placeholder: "new password" %>
+          </div>
+        </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+        <div class="control-group">
+          <div class="controls">
+            <%= f.password_field :password_confirmation, placeholder: "new password conf." %>
+          </div>
+        </div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+        <div class="control-group">
+          <div class="controls">
+            <%= f.password_field :current_password,
+                    :placeholder => "needed to confirm your changes" %>
+          </div>
+        </div>
+        <div class="control-group">
+          <div class="controls">
+            <%= f.submit "Update", :class => "btn btn-primary" %>
+            <%= link_to "Cancel", "/", :class => "btn" %>
+          </div>
+        </div>
+      </fieldset>
+    <% end %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
-
-<%= link_to "Back", :back %>
+    <legend>Cancel account</legend>
+    <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+  </div>
+</div>
